public/stylesheets/app.css
i.icon {
    font-size: 2em;
}

* {
	box-sizing: border-box;
}

.container.main {
    margin-top: 7.0em;
}

#delete {
    display: inline;
}

.header span {
    color: rgba(191, 159, 78, .8);
}

hr.color1 {
    color: black;
}

.input_comment input {
    width: 300px;
}

.comment_link {
        display: inline-flex;
}
hr {
    background-color: rgba(191, 159, 78, .8);
}

 /* * * * * * * * * * * * * responsive grid * * * * * * * * * * * * * * * */

/* Large desktop */
@media (min-width: 1200px) {
    
}
 
/* Portrait tablet to landscape and desktop */
@media (min-width: 768px) and (max-width: 979px) {
    
}
 
/* Landscape phone to portrait tablet */
@media (max-width: 767px) {
    
    .collapse {
        display: block;
    }
    
    .comment_link .input_comment input {
        width: 300px;
    }
    .comment_link .btn {
        font-size: smaller;
    }
}
 
/* Landscape phones and down */
@media (max-width: 480px) {
    /*navbar*/
    .navbar a {
        font-size: 1em;
    }
    
    .post_header {
      font-size: .8em;  
    }
    .item_font_post {
     font-size: 1em;   
    }
    .post_date {
        background-color: rgba(250, 224, 157, .5);
    }
    
    /*comment area*/
    .container {
     width: 90%;   
    }
    /*comment text link*/
    .comment_link {
        margin: 0 0 0 -20;
    }
    .comment_link .input_comment input {
        width: 300px;
    }
    .comment_link .btn {
        display: none;
    }
    
    
    
}

 /* * * * * * * * * * * * landing page * * * * * * * * */
.container_landing {
    background: url(https://cdn.pixabay.com/photo/2016/12/16/15/25/christmas-1911637__340.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    font-family: Lato;
    height: 100%;
}

#content {
    text-align: center;
    padding-top: 25%;
    text-shadow: 0px 4px 3px rgba(0, 0, 0, .4),
                 0px 8px 13px rgba(0, 0, 0, .1),
                 0px 18px 23px rgba(0, 0, 0, .1);
}

h1 {
  font-weight: 700;
  font-size: 5em;
  color: white;
}
h3 {
  color: white;
}
.hr-landing {
    width: 400px;
    border-top: 1px solid #f8f8f8;
    border-bottom: 1px solid rgba(0, 0, 0, .2);
}
.btn-secondary {
    background-color: rgba(255, 102, 26, .3);
}

